[tool.poetry]
name = "arm-os-book"
version = "0.1.0"
description = ""
authors = ["Andrii Hlyvko <hlyvko@knightwerx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
